# handwritten-calculator

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pylint.yml
demo/: README.md  compose.yaml
demo/backend/: Dockerfile  README.md  app.py  app_config.py  development.env  image_processing.py  requirements.txt  services.py  views.py
demo/backend/trained_models/: hc-digits-mlp-model.keras  hc-symbols-mlp-model.keras
demo/frontend/: Dockerfile  README.md  app.py  app_config.py  core.py  development.env  model.py
demo/frontend/static/: calc-script.js  calc-style.css  capture-script.js  capture-style.css  digit-script.js  digit-style.css  style.css  symbol-script.js  symbol-style.css
demo/frontend/templates/: _messages.html  _navigation.html  about.html  capture.html  digit.html  home.html  symbol.html
mdas_symbol_dataset/: README.md
trained_models/: README.md  hc-symbols-mlp-model.keras
training/: README.md  requirements.txt  train_digits_cnn.py  train_digits_mlp.py  train_symbols_cnn.py  train_symbols_mlp.py
training/model/: cnn.py  mlp.py
training/scripts/: amplify_symbol_data.py
